[7 Jun 07]

 * Datetime restrictions should be parsed as datetimes [Adam Meehan]
 
[Earlier]

 * Remove unused colon separated date format (dd:mm:yy) from parsing
 