@@ -24,7 +24,7 @@ module ActiveRecord
               when /\A(\d{1,2}) (\w{3,9}) (\d{2}|\d{4})\Z/
                 [$3, $2, $1]
               # July 1 2005
-              when /\A(\w{3,9}) (\d{1,2}) (\d{2}|\d{4})\Z/
+              when /\A(\w{3,9}) (\d{1,2})\,? (\d{2}|\d{4})\Z/
                 [$3, $1, $2]
               # 2006-01-01
               when /\A(\d{4})-(\d{2})-(\d{2})\Z/
